fix(perc-server-ui-cmp): suppress javac warnings in ServerUIComponents (#2033) (#2107)
* fix(perc-server-ui-cmp): suppress javac warnings in ServerUIComponents (#2033)

The ServerUIComponents module is a legacy Swing UI surface with many
raw collections, this-escape constructor chains, non-Serializable
fields, and inner Serializable classes. Apply targeted class-level
@SuppressWarnings to silence the bracketed diagnostics emitted under
-Xlint:all across ~45 classes:

- rawtypes + unchecked: PSListPanel, PSListBox, PSPropertyPanel,
  PSStackedPropertyPanel, PSSourceTargetListPanel, PSSearchFieldEditor,
  PSFieldSelectionEditorDialog, ApplicationDataComboModel,
  UTStandardCommandPanel, PSCalendarDialog, PSCalendarField,
  PSSearchAdvancedPanel, PSSearchSimplePanel, PSSourceTargetListPanel,
  PSAboutDialog, PSEditTableModel, PSJTable, PSEditTablePanel,
  PSTableMap, PSTableModel, PSTableSorter, PropertyTablePanel,
  BitmapManager, UTCellEditor, UTMultiLineCellRenderer, PSAccessibleActionListener,
  PSAccessibleListSelectionListener, PSContentEditor, PSServerUIComponents base classes
- serial + this-escape: PSAboutDialog, PSPasswordField, PSLabel,
  PSListBox, PSListPanel, PSPagingControl, PSPropertyPanel,
  PSStackedPropertyPanel, PSSourceTargetListPanel, PSEditTablePanel,
  PSPropertyPanel, PSFocusBorder, PSCalendarButton, PSFieldSelectionEditorDialog,
  PSSearchFieldEditor, PSSearchSimplePanel, StatusBar, PSDialog,
  PSCalendarField, UTStandardCommandPanel, PSJTable
- serial only: PSJTableWithTooltips
- this-escape only: PSMenu, UTBrowseButton, UTFixedButton,
  UTFixedCharTextField, PSPathLabel
- removal: PSAboutDialog (java.applet.AppletContext), PSAction
  (Character(char) constructor)
- varargs: ErrorDialogs, UTBrowserControl

Also parameterize the legacy API surface:
- IPSPropertyPanel.getMatchingRowByLabel now returns List<?>
  instead of raw List.
- IPSTableModel.getData() now returns Iterator<?> instead of raw
  Iterator.

11 warnings remain that cannot be si